--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,3 @@
-<<<<<<< Updated upstream
-<<<<<<< HEAD
-=======
->>>>>>> Stashed changes
-# .NET
-bin/
-obj/
-*.user
-*.suo
-*.userosscache
-*.sln.docstates
-*.db
-*.db-shm
-*.db-wal
-/app/data/
-
 # Node
 node_modules/
 build/
@@ -23,51 +7,18 @@ npm-debug.log
 yarn-debug.log
 yarn-error.log
 
-# Docker
-*.tar
-*.pid
+# React/Frontend
+client/node_modules/
+client/build/
+client/.env*
 
-# VSCode
-.vscode/
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Relay
-__generated__/
-
-# Logs
-*.log
-
-# Others
-frontend/.env
-<<<<<<< Updated upstream
-=======
-# .NET
-bin/
-obj/
-*.user
-*.suo
-*.userosscache
-*.sln.docstates
+# SQLite/DB
 *.db
 *.db-shm
 *.db-wal
-/app/data/
 
-# Node
-node_modules/
-build/
-dist/
-.env
-npm-debug.log
-yarn-debug.log
-yarn-error.log
-
-# Docker
-*.tar
-*.pid
+# Logs
+*.log
 
 # VSCode
 .vscode/
@@ -76,15 +27,26 @@ yarn-error.log
 .DS_Store
 Thumbs.db
 
+# Misc
+coverage/
+
+# Ignore environment files
+.env*
+
+# Ignore test coverage
+/coverage
+
+# Docker
+*.tar
+*.pid
+
+# OS
+.DS_Store
+Thumbs.db
+
 # Relay
 __generated__/
 
-# Logs
-*.log
-
 # Others
 frontend/.env
->>>>>>> e8347207aaf6edae458910065ff594d6a01a54a2
-=======
->>>>>>> Stashed changes
 backend/.env 
